--- a/packages/decap-cms-core/package.json
+++ b/packages/decap-cms-core/package.json
@@ -27,7 +27,7 @@
     "@iarna/toml": "2.2.5",
     "@reduxjs/toolkit": "^1.9.1",
     "@vercel/stega": "^0.1.2",
-    "ajv": "8.12.0",
+    "ajv": "^8.12.0",
     "ajv-errors": "^3.0.0",
     "ajv-keywords": "^5.0.0",
     "clean-stack": "^4.1.0",
